# typeclasses.com

web-lesson10/: WebLesson10.hs  web-lesson10.cabal
web-lesson5/: WebLesson5.hs  web-lesson5.cabal
web-lesson7/: WebLesson7.hs  web-lesson7.cabal
web-lesson8/: WebLesson8.hs  web-lesson8.cabal
web-lesson9/: WebLesson9.hs  web-lesson9.cabal
