name: web-lesson10
version: 0
homepage: https://typeclasses.com/web-servers/lesson-10
build-type: Simple
cabal-version: >= 1.10

library
    hs-source-dirs: .
    exposed-modules: WebLesson10
    default-language: Haskell2010

    build-depends:
        attoparsec
      , base
      , bytestring
      , contravariant
      , network
      , network-simple >= 0.4.2
      , text
