name: web-lesson5
version: 0
homepage: https://typeclasses.com/web-servers/lesson-5
build-type: Simple
cabal-version: >= 1.10

library
    hs-source-dirs: .
    exposed-modules: WebLesson5
    default-language: Haskell2010

    build-depends:
        base
      , bytestring
      , contravariant
      , network
      , network-simple >= 0.4.2
