name: web-lesson9
version: 0
homepage: https://typeclasses.com/web-servers/lesson-9
build-type: Simple
cabal-version: >= 1.10

library
    hs-source-dirs: .
    exposed-modules: WebLesson9
    default-language: Haskell2010

    build-depends:
        attoparsec
      , base
      , bytestring
      , contravariant
      , network
      , network-simple >= 0.4.2
